# abax

./: Cargo.toml  LICENSE  README.md  output.txt
src/: beta.rs  betacdf.rs  betainc.rs  betaincinv.rs  betainv.rs  betaln.rs  betapdf.rs  binodeviance.rs  consts.rs  dgammainc.rs  digamma.rs  erf.rs  erfc.rs  erfcinv.rs  erfcx.rs  erfinv.rs  expcdf.rs  expinv.rs  exppdf.rs  gamcdf.rs  gaminv.rs  gamma.rs  gammainc.rs  gammaincinv.rs  gammaln.rs  gampdf.rs  lib.rs  logncdf.rs  logninv.rs  lognpdf.rs  nctcdf.rs  nctinv.rs  nctpdf.rs  normcdf.rs  norminv.rs  normpdf.rs  psi.rs  stirlerr.rs  tcdf.rs  tetragamma.rs  (+3 more)
