[package]
name = "abax"
version = "0.1.7"
edition = "2024"
description = "A lightweight Rust library providing high-precision mathematical constants and special functions, including Bernoulli numbers, Riemann Zeta values, and the Gamma function."
license = "MIT"
repository = "https://github.com/shawlynchen/abax"
readme = "README.md"
keywords = ["math", "constants", "bernoulli", "zeta", "stirling"]
categories = ["science", "mathematics"]

[dependencies]
