[package]
name = "abax"
version = "0.1.31"
edition = "2024"
description = "A lightweight Rust library providing high-precision mathematical constants and special functions, including Bernoulli numbers, Riemann Zeta values, robust incomplete gamma functions, and probability distribution functions like normal and lognormal CDF."
license = "MIT"
repository = "https://github.com/shawlynchen/abax"
readme = "README.md"
keywords = ["math", "special-functions", "distribution", "statistics"]
categories = ["science", "mathematics"]

[dependencies]
